--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah');
+
 .App {
   text-align: center;
+  font-family: 'Gloria Hallelujah', cursive;
 }
 
 .App-logo {
